[package]
name = "rocket-download-response"
version = "0.5.3"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.67"
repository = "https://github.com/magiclen/rocket-download-response"
homepage = "https://magiclen.org/rocket-download-response"
keywords = ["rocket", "server", "web", "download", "attach"]
categories = ["web-programming"]
description = "This crate provides a response struct used for client downloading."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rocket = "0.5.0-rc.3"
mime = "0.3.13"
mime_guess = " 2.0.0"
url-escape = "0.1"

[dependencies.educe]
version = ">=0.4.0"
features = ["Debug"]
default-features = false
